Add GitHub Actions workflow for deploying to GitHub Pages

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,31 +6,27 @@ on:
       - main
 
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Setup Pages
-      uses: actions/setup-pages@v1
-
-    - name: Build and deploy
-      run: |
-        mkdir -p public
-        cp -r * public
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload to GitHub Pages
-      uses: actions/upload-pages-artifact@v1
+    - name: Setup Node.js
+      uses: actions/setup-node@v2
       with:
-        path: ./public
+        node-version: '14'
+
+    - name: Install dependencies
+      run: npm install
+
+    - name: Build the project
+      run: npm run build
 
     - name: Deploy to GitHub Pages
-      id: pages
-      uses: actions/deploy-pages@v1
+      uses: peaceiris/actions-gh-pages@v3
       with:
-        token: ${{ secrets.GITHUB_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: ./public
 
